--- a/app/src/main/res/layout/activity_add_book.xml
+++ b/app/src/main/res/layout/activity_add_book.xml
@@ -1,194 +1,205 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center"
     tools:context=".AddBookActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/new_book_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="50dp"
-            android:text="Add a new book"
-            android:textSize="30sp"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 
-        <TextView
-            android:id="@+id/title_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Title"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@id/book_title"
-            app:layout_constraintStart_toStartOf="@id/book_title"
-            app:layout_constraintTop_toBottomOf="@id/new_book_text" />
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
 
-        <TextView
-            android:id="@+id/author_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            android:text="Author"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="@id/book_author"
-            app:layout_constraintStart_toStartOf="@id/book_author"
-            app:layout_constraintTop_toBottomOf="@id/new_book_text" />
-
-        <EditText
-            android:id="@+id/book_title"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            app:layout_constraintEnd_toStartOf="@id/book_author"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@id/book_author" />
-
-        <EditText
-            android:id="@+id/book_author"
-            android:layout_width="0dp"
-            android:layout_height="40dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/book_title"
-            app:layout_constraintTop_toBottomOf="@id/author_text" />
-
-        <TextView
-            android:id="@+id/description_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="Description"
-            android:textSize="16sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/book_author" />
-
-        <EditText
-            android:id="@+id/book_description"
-            android:layout_width="match_parent"
-            android:layout_height="100dp"
-            android:paddingStart="10dp"
-            android:paddingEnd="10dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/description_text" />
-
-        <TextView
-            android:id="@+id/isnb_text"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:padding="10dp"
-            android:text="ISBN"
-            android:textSize="12sp"
-            app:layout_constraintTop_toBottomOf="@id/book_description" />
-
-        <EditText
-            android:id="@+id/isbn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="text"
-            app:layout_constraintTop_toBottomOf="@id/isnb_text" />
-
-        <!--        <TextView-->
-        <!--            android:id="@+id/number_of_books_text"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:text="Number of books"-->
-        <!--            android:textSize="16sp"-->
-        <!--            android:padding="10dp"-->
-        <!--            android:gravity="center"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/book_description"/>-->
-
-        <!--        <NumberPicker-->
-        <!--            android:id="@+id/number_of_books"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintStart_toStartOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/number_of_books_text" />-->
-
-        <!--        <TextView-->
-        <!--            android:id="@+id/first_book_text"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="wrap_content"-->
-        <!--            android:text="First Book"-->
-        <!--            android:padding="10dp"-->
-        <!--            android:gravity="center"-->
-        <!--            android:textSize="16sp"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/number_of_books"/>-->
+<!--        <TextView-->
+<!--            android:id="@+id/new_book_text"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:padding="50dp"-->
+<!--            android:text="Add a new book"-->
+<!--            android:textSize="30sp"-->
+<!--            android:textStyle="bold"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
 
 
-        <com.denzcoskun.imageslider.ImageSlider
-            android:id="@+id/image_slider"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:background="@color/gray"
-            app:iss_auto_cycle="true"
-            app:iss_delay="1000"
-            app:iss_period="3000"
-            app:layout_constraintTop_toBottomOf="@id/isbn" />
+<!--        <TextView-->
+<!--            android:id="@+id/title_text"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Title"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/book_title"-->
+<!--            app:layout_constraintStart_toStartOf="@id/book_title"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/new_book_text" />-->
 
-        <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/add_photo_button"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_margin="10dp"
-            android:background="@drawable/round_btn"
-            android:src="@drawable/ic_plus"
-            app:layout_constraintBottom_toBottomOf="@id/image_slider"
-            app:layout_constraintEnd_toEndOf="@id/image_slider" />
+<!--        <TextView-->
+<!--            android:id="@+id/author_text"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingStart="10dp"-->
+<!--            android:paddingEnd="10dp"-->
+<!--            android:text="Author"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/book_author"-->
+<!--            app:layout_constraintStart_toStartOf="@id/book_author"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/new_book_text" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/book_title"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:paddingStart="10dp"-->
+<!--            android:paddingEnd="10dp"-->
+<!--            app:layout_constraintEnd_toStartOf="@id/book_author"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="@id/book_author" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/book_author"-->
+<!--            android:layout_width="0dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@id/book_title"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/author_text" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/description_text"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:padding="10dp"-->
+<!--            android:text="Description"-->
+<!--            android:textSize="16sp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/book_author" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/book_description"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="100dp"-->
+<!--            android:paddingStart="10dp"-->
+<!--            android:paddingEnd="10dp"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/description_text" />-->
+
+<!--        <TextView-->
+<!--            android:id="@+id/isnb_text"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center"-->
+<!--            android:padding="10dp"-->
+<!--            android:text="ISBN"-->
+<!--            android:textSize="12sp"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/book_description" />-->
+
+<!--        <EditText-->
+<!--            android:id="@+id/isbn"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:inputType="text"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/isnb_text" />-->
+
+<!--        &lt;!&ndash;        <TextView&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:id="@+id/number_of_books_text"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:text="Number of books"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:textSize="16sp"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:padding="10dp"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:gravity="center"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:layout_constraintTop_toBottomOf="@id/book_description"/>&ndash;&gt;-->
+
+<!--        &lt;!&ndash;        <NumberPicker&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:id="@+id/number_of_books"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:layout_constraintTop_toBottomOf="@id/number_of_books_text" />&ndash;&gt;-->
+
+<!--        &lt;!&ndash;        <TextView&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:id="@+id/first_book_text"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:text="First Book"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:padding="10dp"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:gravity="center"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:textSize="16sp"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:layout_constraintTop_toBottomOf="@id/number_of_books"/>&ndash;&gt;-->
 
 
-        <!--        <com.denzcoskun.imageslider.ImageSlider-->
-        <!--            android:id="@+id/image_slider_2"-->
-        <!--            android:layout_width="match_parent"-->
-        <!--            android:layout_height="250dp"-->
-        <!--            android:background="@color/gray"-->
-        <!--            app:iss_auto_cycle="true"-->
-        <!--            app:iss_delay="1000"-->
-        <!--            app:iss_period="3000"-->
-        <!--            app:layout_constraintEnd_toEndOf="parent"-->
-        <!--            app:layout_constraintLeft_toLeftOf="parent"-->
-        <!--            app:layout_constraintTop_toBottomOf="@id/image_slider" />-->
+<!--        <com.denzcoskun.imageslider.ImageSlider-->
+<!--            android:id="@+id/image_slider"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="250dp"-->
+<!--            android:background="@color/gray"-->
+<!--            app:iss_auto_cycle="true"-->
+<!--            app:iss_delay="1000"-->
+<!--            app:iss_period="3000"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/isbn" />-->
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/add_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="25dp"
-            android:layout_marginBottom="25dp"
-            android:text="Add book"
-            android:textAllCaps="false"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/cancel_button"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/image_slider" />
+<!--        <androidx.appcompat.widget.AppCompatImageButton-->
+<!--            android:id="@+id/add_photo_button"-->
+<!--            android:layout_width="50dp"-->
+<!--            android:layout_height="50dp"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:background="@drawable/round_btn"-->
+<!--            android:src="@drawable/ic_plus"-->
+<!--            app:layout_constraintBottom_toBottomOf="@id/image_slider"-->
+<!--            app:layout_constraintEnd_toEndOf="@id/image_slider" />-->
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/cancel_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/cancel"
-            android:textAllCaps="false"
-            app:layout_constraintBottom_toBottomOf="@id/add_button"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/add_button"
-            app:layout_constraintTop_toTopOf="@id/add_button" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        &lt;!&ndash;        <com.denzcoskun.imageslider.ImageSlider&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:id="@+id/image_slider_2"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:layout_height="250dp"&ndash;&gt;-->
+<!--        &lt;!&ndash;            android:background="@color/gray"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:iss_auto_cycle="true"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:iss_delay="1000"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:iss_period="3000"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:layout_constraintLeft_toLeftOf="parent"&ndash;&gt;-->
+<!--        &lt;!&ndash;            app:layout_constraintTop_toBottomOf="@id/image_slider" />&ndash;&gt;-->
 
-</ScrollView>
+<!--        <androidx.appcompat.widget.AppCompatButton-->
+<!--            android:id="@+id/add_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginTop="25dp"-->
+<!--            android:layout_marginBottom="25dp"-->
+<!--            android:text="Add book"-->
+<!--            android:textAllCaps="false"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toStartOf="@id/cancel_button"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toBottomOf="@id/image_slider" />-->
+
+<!--        <androidx.appcompat.widget.AppCompatButton-->
+<!--            android:id="@+id/cancel_button"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="@string/cancel"-->
+<!--            android:textAllCaps="false"-->
+<!--            app:layout_constraintBottom_toBottomOf="@id/add_button"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@id/add_button"-->
+<!--            app:layout_constraintTop_toTopOf="@id/add_button" />-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+</androidx.constraintlayout.widget.ConstraintLayout>
