--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -55,5 +55,22 @@
         app:layout_constraintStart_toStartOf="@id/receiver_book"
         app:layout_constraintTop_toBottomOf="@id/receiver_book" />
 
+    <ImageView
+        android:id="@+id/accepted"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_camera"
+        app:layout_constraintBottom_toTopOf="@id/swap_icon"
+        app:layout_constraintStart_toStartOf="@id/swap_icon"/>
+
+    <ImageView
+        android:id="@+id/declined"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_down_arrow"
+        app:layout_constraintTop_toBottomOf="@id/swap_icon"
+        app:layout_constraintStart_toStartOf="@id/swap_icon"/>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
