--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -159,6 +159,28 @@
         app:layout_constraintTop_toTopOf="@id/email_address" />
 
     <TextView
+        android:id="@+id/distance_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Distance to users:"
+        android:background="@color/gray"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/email_address"/>
+
+    <com.google.android.material.slider.Slider
+        android:id="@+id/distance_slider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:valueFrom="1.0"
+        android:valueTo="100.0"
+        android:stepSize="1.0"
+        app:layout_constraintTop_toBottomOf="@id/distance_text"/>
+
+
+    <TextView
         android:id="@+id/error_message"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -181,7 +203,7 @@
         android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_address" />
+        app:layout_constraintTop_toBottomOf="@id/distance_slider" />
 
     <TextView
         android:id="@+id/verified_account"
